--- a/package.json
+++ b/package.json
@@ -10,8 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "@hookform/resolvers": "5.0.1",
+    "@tailwindcss/vite": "4.1.7",
+    "@tanstack/react-query": "5.76.1",
+    "@tanstack/react-query-devtools": "5.76.1",
+    "axios": "1.9.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-error-boundary": "6.0.0",
+    "react-hook-form": "7.56.4",
+    "react-router-dom": "7.6.0",
+    "react-toastify": "11.0.5",
+    "zod": "3.25.7",
+    "zustand": "5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
@@ -22,8 +33,11 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
+    "prettier-plugin-tailwindcss": "0.6.11",
+    "tailwindcss": "4.1.7",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.39.1",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vite-tsconfig-paths": "5.1.4"
   }
 }
