--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,12 @@
 {
-	"printWidth": 100,
-	"tabWidth": 2,
-	"useTabs": false,
-	"semi": false,
-	"jsxSingleQuote": true,
-	"singleQuote": true,
-	"trailingComma": "all",
-	"bracketSpacing": true,
-	"arrowParens": "always"
+  "printWidth": 100,
+  "tabWidth": 2,
+  "useTabs": false,
+  "semi": false,
+  "jsxSingleQuote": true,
+  "singleQuote": true,
+  "trailingComma": "all",
+  "bracketSpacing": true,
+  "arrowParens": "always",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
