--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-hook-form": "7.56.4",
     "react-router-dom": "7.6.0",
     "react-toastify": "11.0.5",
+    "vite-plugin-svgr": "^4.5.0",
     "zod": "3.25.7",
     "zustand": "5.0.4"
   },
